Changelog
=========

2.20 - Unreleased
-----------------

* Remove buildout.threatlevel extension from plone4_buildout. [davisagli]

2.19 - January 21, 2011
--------------------------

* In every setup.py, replace '%3A' with ':', making list_classifier url an url
  which can actually be used.
  [thet]

* Added plone4_buildout [miohtama]

* Improvements to README [miohtama]

2.18 - September 30, 2010
-------------------------

* Add bin/zopeskel --version flag.  Reports current version of zopeskel
  (http://plone.org/products/zopeskel/issues/48)
  [cewing]

* plone3_buildout: use Plone 3.3.5 by default.
  [maurits]

* Fixed a problem with the generic setup profile in plone templates in which a
  profile was registered in zcml, but no profiles directory was created.
  (http://plone.org/products/zopeskel/issues/46)
  [cewing]

* use i18n:domain plone for portlet title so it need not be translated twice
  (http://plone.org/products/zopeskel/issues/44)
  [fRiSi]

* use the correct name of package, so it can be used in package with 2 dots or
  1 dots in package name
  [lucmult]

2.17 - June 14, 2010
--------------------

* Added a pin for PasteScript>=1.7.2.  This solves an issue where using zopeskel
  with an early version of PasteScript resulted in a method signature mismatch
  on the paster command 'challenge' method.  Fixes issue #42
  (http://plone.org/products/zopeskel/issues/42)
  [cewing]

* Fixed lingering problem in Archetypes template with registering a 'locales'
  directory before one is created.  Users now need to add an i18nlocale via
  addcontent in order to get this directory and have it registered via zcml.
  [cewing]

* Fixed dependency in Archetypes template doctests on the presence of the log-in
  portlet.  Tests now open the 'login_form' instead.  Resolves issue #40
  (http://plone.org/products/zopeskel/issues/40)
  [cewing]

* Added new browserlayer localcommand for plone and archetype templates.
  [marcosfromero]
